# FFX-RNG-tracker

./: .gitignore  MANIFEST.in  README.md  encounters_tracker.py  ffx_monster_data_viewer.py  ffx_predict_equipment_drops.py  ffx_rng_damage_tracker.py  ffx_rng_drops_tracker.py  ffx_rng_encounters_tracker.py  ffx_rng_tracker.py  ffx_rng_tracker_pyinstaller.py  ffx_rng_tracker_ui.py  ffxhd-abilities.csv  ffxhd-characters.csv  ffxhd-items.csv  ffxhd-mon_data.csv  ffxhd_rng_tracker_default_notes.txt  get_spoils.py  index.md  monster_data_viewer.py  pyproject.toml  seedfinder.py  setup.cfg
data/: actions.csv  actions.json  actions_notes.txt  any_encounters.csv  autoabilities.csv  characters.csv  characters.json  default_configs.ini  drops_notes.txt  encounters_settings.csv  equipment_names.csv  ffx_mon_data.csv  ffxhd_raw_rng_arrays.csv  formations.csv  formations.json  items.csv  monster_actions.json  monster_actions_notes.txt  yojimbo_notes.txt
ffx_rng_tracker/: __init__.py  configs.py  errors.py  events.py  gamestate.py  logger.py  main.py  tracker.py  ui_functions.py  utils.py
ffx_rng_tracker/data/: actions.py  actor.py  autoabilities.py  characters.py  constants.py  encounter_formations.py  encounters.py  equipment.py  equipment_shops.py  file_functions.py  items.py  macros.py  monsters.py  notes.py  seeds.py  statuses.py  text_characters.py  zones.py
ffx_rng_tracker/events/: advance_rng.py  change_party.py  (+18 more)
files/: ffx_rng_encounters_settings.csv  ffxhd-abilities.csv  ffxhd-characters.csv  ffxhd-formations.csv  ffxhd-items.csv  ffxhd_rng_tracker_default_notes.txt
(+78 files in other folders)
