[metadata]
name = ffx_rng_tracker
version = attr: ffx_rng_tracker.__version__
author = Grayfox96
url = https://github.com/Grayfox96/FFX-RNG-tracker
description = FFX RNG Tracker
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
include_package_data = True
packages = find:
zip_safe = True
python_requires = >=3.11
